# gf_ms_authentication

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml
entity/: Cargo.toml
entity/src/: address.rs  lib.rs  role.rs  user.rs  usr_asso_adr.rs  usr_asso_rol.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
proto/: authentication.proto  role.proto  user.proto
src/: db.rs  error.rs  jwt.rs  main.rs  server_builder.rs
src/db/: migration.rs
src/jwt/: claims.rs  generate.rs
src/services/: authentication.rs  role.rs  user.rs
