workspace = { members = [".", "entity"] }
[package]
name = "ms_authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
entity ={ path = "entity"}
prost = "0.12.4"
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15.0"

[build-dependencies]
tonic-build = "0.11.0"
